release 1.0.1 (2008-11/12)
- Support the getting form parameters from a request,
  see HttpRequestContext.getFormParameters. Filters may use this method to
  get access to form parameters.
  
release 1.0 (2008-10-13)
- The response filter chain will now get invoked if an exception is thrown
  from a request filter or a resource class and is mapped to a response.
  If an exception is thrown from a response filter then the response filter
  chain is terminated and the exception is mapped to a response.
- Fixed issue 119
  https://jersey.dev.java.net/issues/show_bug.cgi?id=119
  Locale instances not correctly created from HTTP language-based headers.
- Fixed issue with bridge methods being included in the analysis
  of resource classes.
- When implicit views are enabled allow deferral to implicit GET when
  non of the explicit GETs match. Previously if there were any explicit
  GETs non-matching or otherwise no deferral occurred.
- Fixed issue 115.
  https://jersey.dev.java.net/issues/show_bug.cgi?id=115
  UriBulder.buildFromEncoded does not work correctly for query parameters
  that contain '+' characters.
- Fixed issue 114.
  https://jersey.dev.java.net/issues/show_bug.cgi?id=114
  When URI building with template parameters and no explicit port is declared
  then -1 occurs as the port component in the built URI.
- Support for EJB stateless session beans as resource classes.
  A local or remote interface may be annotated with JAX-RS annotations, for
  example the interface may be annotated with @Path to make the session bean
  a root resource class.
  When an application is deployed Jersey will attempt to look up any registeted
  root resource classes that are interfaces using JNDI where the fully qualified
  class name is the JNDI name. If an instance is found then the class is removed
  from registered set of classes and the instance is added to the registered set
  of singletons.
- Fixed issue 112
  https://jersey.dev.java.net/issues/show_bug.cgi?id=112